--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -103,8 +103,8 @@
           <i class="fi-arrow-right size-18"> <%= t("backend.frontend")%></i>
       <% end %>
     </li>
-    <li class="<%= active_menu('users/passwords') %>">
-      <%= link_to edit_admin_user_path(current_user) do %>
+    <li class="<%= active_menu('admin/passwords') %>">
+      <%= link_to admin_edit_password_path do %>
           <i class="fi-key size-18"> <%= t("backend.change_password")%></i>
       <% end %>
     </li>
