--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
     <%= javascript_include_tag 'application' %>
     <%= javascript_include_tag "vendor/modernizr" %>
     <%= csrf_meta_tags %>
-    <%= auto_discovery_link_tag :atom, root_path(format: :atom) %>
-    <%= auto_discovery_link_tag :rss, root_path(format: :rss) %>
+    <%= auto_discovery_link_tag :atom, visitors_path(format: :atom), id: 'atom_link' %>
+    <%= auto_discovery_link_tag :rss, visitors_path(format: :rss), id: 'rss_link' %>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
