--- a/app/views/visitors/headline/_holder.html.erb
+++ b/app/views/visitors/headline/_holder.html.erb
@@ -2,7 +2,7 @@
   <p>
     <span class="keywords"><%= t('main.events_for') %> </span>
     <strong class="result-m mb20">
-      <%= link_to @holder.full_name, agenda_path(@holder.id, @holder.full_name.parameterize) %>
+      <%= link_to @holder.full_name, agenda_path(@holder.id, @holder.full_name.parameterize) if @holder.present? %>
     </strong>
   </p>
 </div>
