Allow manager/admin user create an event to association/federation as lobby.

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -60,7 +60,7 @@
             <hr />
           </div>
         <% end %>
-
+        <%= hidden_field_tag :organization_entity_type%>
         <%= render 'event_represented_entities', f:f %>
         <hr />
         <%= render 'event_agents', f:f %>
