--- a/app/views/event_mailer/decline.html.erb
+++ b/app/views/event_mailer/decline.html.erb
@@ -1,25 +1,15 @@
-<td style="padding-bottom: 20px; padding-left: 10px;">
-  <h1 style="font-family: 'Open Sans','Helvetica Neue',arial,sans-serif;">
-    <%= t('mailers.decline_event.welcome', name: @lobby_name) %>
-  </h1>
-
-  <p style="font-family: 'Open Sans','Helvetica Neue',arial,sans-serif;font-size: 14px;font-weight: normal;line-height: 24px;">
-     <%= t('mailers.decline_event.text1', title: @event_title) %>
-  </p>
-
-  <p style="font-family: 'Open Sans','Helvetica Neue',arial,sans-serif;font-size: 14px;font-weight: normal;line-height: 24px;">
-     <%= t('mailers.decline_event.text2', name: @name) %>
-  </p>
-
-  <p style="font-family: 'Open Sans','Helvetica Neue',arial,sans-serif;font-size: 14px;font-weight: normal;line-height: 24px;">
-     <%= raw @reasons %>
-  </p>
-
-  <p style="font-family: 'Open Sans','Helvetica Neue',arial,sans-serif;font-size: 14px;font-weight: normal;line-height: 24px;">
-     <%= t('mailers.decline_event.declined_at', declined_at: @declined_at) %>
-  </p>
-
-  <p style="font-family: 'Open Sans','Helvetica Neue',arial,sans-serif;font-size: 14px;font-weight: normal;line-height: 24px;">
-    <%= t('mailers.decline_event.thanks') %>
-  </p>
+<td>
+  <h1><%= t('mailers.decline_event.head1', event_reference: @event_reference)%></h1>
+  <p><%= t('mailers.decline_event.text1', event_reference: @event_reference) %></p>
+  <h2><%= t('mailers.decline_event.head2')%></h2>
+  <ul>
+    <li><b><%= t('mailers.decline_event.text2')%></b> <%= @event_title %></li>
+    <li><b><%= t('mailers.decline_event.text3')%></b> <%= @event_description %></li>
+  </ul>
+  <h2><%= t('mailers.decline_event.head3')%></h2>
+  <ul>
+    <li><b><%= t('mailers.decline_event.text4')%></b> <%= @reasons %></li>
+  </ul>
+  <p><b><%= t('mailers.decline_event.notice') %></b><a href="http://registrodelobbies.madrid.es/">http://registrodelobbies.madrid.es/</a></p>
 </td>
+
