--- a/app/views/organization_mailer/create.html.erb
+++ b/app/views/organization_mailer/create.html.erb
@@ -1,13 +1,22 @@
-<td style="padding-bottom: 20px; padding-left: 10px;">
-  <h1 style="font-family: 'Open Sans','Helvetica Neue',arial,sans-serif;">
-    <%= t('mailers.create_organization.welcome', name: @name) %>
-  </h1>
-
-  <p style="font-family: 'Open Sans','Helvetica Neue',arial,sans-serif;font-size: 14px;font-weight: normal;line-height: 24px;">
-     <%= t('mailers.create_organization.text1', title: @title) %>
-  </p>
-
-  <p style="font-family: 'Open Sans','Helvetica Neue',arial,sans-serif;font-size: 14px;font-weight: normal;line-height: 24px;">
-    <%= t('mailers.create_organization.thanks') %>
-  </p>
+<td>
+  <h1><%= t('mailers.create_organization.head1', lobby_reference: @lobby_reference)%></h1>
+  <p><%= t('mailers.create_organization.text1', lobby_reference: @lobby_reference) %></p>
+  <p><%= t('mailers.create_organization.head2')%></p>
+  <ul>
+    <li><b><%= t('mailers.create_organization.text2') %></b><%= @lobby_name %></li>
+    <li><b><%= t('mailers.create_organization.text3') %></b><%= @lobby_inscription_date %></li>
+  </ul>
+  <p><%= t('mailers.create_organization.head3')%></p>
+  <ul>
+    <li><b><%= t('mailers.create_organization.text4') %></b><%= @user_name %></li>
+    <li><b><%= t('mailers.create_organization.text5') %></b><%= @user_password %></li>
+  </ul>
+  <p><%= t('mailers.create_organization.text6') %></p>
+  <p><%= t('mailers.create_organization.text7') %></p>
+  <p><%= t('mailers.create_organization.text8') %><a href="<%=@link%>"><%=@link%></a></p>
+  <ul>
+    <li><b><%= t('mailers.create_organization.text9') %></b></li>
+    <li><%= t('mailers.create_organization.text10') %></li>
+    <li><%= t('mailers.create_organization.text11') %></li>
+  </ul>
 </td>
