--- a/app/views/organization_mailer/invalidate.html.erb
+++ b/app/views/organization_mailer/invalidate.html.erb
@@ -1,13 +1,8 @@
-<td style="padding-bottom: 20px; padding-left: 10px;">
-  <h1 style="font-family: 'Open Sans','Helvetica Neue',arial,sans-serif;">
-    <%= t('mailers.invalidate_organization.welcome', name: @name) %>
-  </h1>
-
-  <p style="font-family: 'Open Sans','Helvetica Neue',arial,sans-serif;font-size: 14px;font-weight: normal;line-height: 24px;">
-     <%= t('mailers.invalidate_organization.text1', title: @title) %>
-  </p>
-
-  <p style="font-family: 'Open Sans','Helvetica Neue',arial,sans-serif;font-size: 14px;font-weight: normal;line-height: 24px;">
-    <%= t('mailers.invalidate_organization.thanks') %>
-  </p>
-</td>
+<td>
+  <h1><%= t('mailers.invalidate_organization.head1', lobby_reference: @lobby_reference)%></h1>
+  <p><%= t('mailers.invalidate_organization.text1', lobby_reference: @lobby_reference) %></p>
+  <p><%= t('mailers.invalidate_organization.head2')%></p>
+  <ul>
+    <li><b><%= t('mailers.invalidate_organization.text2')%></b><%=  @lobby_name %></li>
+    <li><b><%= t('mailers.invalidate_organization.text3')%></b><%=  @lobby_invalidated_at %></li>
+  </ul>
