moved mails from model to controller and revision of tests

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -180,7 +180,7 @@
       </div>
     </fieldset>
 
-    <% unless  f.object.new_record? %>
+    <% unless f.object.new_record? || !f.object.lobby_activity? %>
       <fieldset class="reason-activity-actions">
         <legend><%= t('backend.event_actions') %></legend>
         <div class="row">
