fix issues for changes

--- a/app/views/event_mailer/cancel_by_lobby.html.erb
+++ b/app/views/event_mailer/cancel_by_lobby.html.erb
@@ -18,5 +18,5 @@
   <ul>
     <li><b><%= t('mailers.cancel_event.text9')%></b> <%=  @reasons %></li>
   </ul>
-  <p><b><%= t('mailers.cancel_event.notice') %></b></p>
+  <p><b><%= t('mailers.cancel_event.notice') %></b><a href="http://registrodelobbies.madrid.es/">http://registrodelobbies.madrid.es/</a></p>
 </td>
