--- a/app/views/event_mailer/cancel_by_holder.html.erb
+++ b/app/views/event_mailer/cancel_by_holder.html.erb
@@ -1,16 +1,16 @@
 <td>
-  <h1><%= t('mailers.decline_event_by_holder.head1', event_reference: @event_reference)%></h1>
-  <p><%= t('mailers.decline_event_by_holder.text1', event_reference: @event_reference) %></p>
-  <h2><%= t('mailers.decline_event_by_holder.head2')%></h2>
+  <h1><%= t('mailers.cancel_event_by_holder.head1', event_reference: @event_reference)%></h1>
+  <p><%= t('mailers.cancel_event_by_holder.text1', event_reference: @event_reference) %></p>
+  <h2><%= t('mailers.cancel_event_by_holder.head2')%></h2>
   <ul>
-    <li><b><%= t('mailers.decline_event_by_holder.text2') %></b> <%= @event_title %></li>
-    <li><b><%= t('mailers.decline_event_by_holder.text3') %></b> <%= @event_description %></li>
-    <li><b><%= t('mailers.decline_event_by_holder.text4') %></b> <%= @event_scheduled %></li>
-    <li><b><%= t('mailers.decline_event_by_holder.text5') %></b> <%= @event_location %></li>
+    <li><b><%= t('mailers.cancel_event_by_holder.text2') %></b> <%= @event_title %></li>
+    <li><b><%= t('mailers.cancel_event_by_holder.text3') %></b> <%= @event_description %></li>
+    <li><b><%= t('mailers.cancel_event_by_holder.text4') %></b> <%= @event_scheduled %></li>
+    <li><b><%= t('mailers.cancel_event_by_holder.text5') %></b> <%= @event_location %></li>
   </ul>
-    <h2><b><%= t('mailers.decline_event_by_holder.head3')%></h2>
+    <h2><b><%= t('mailers.cancel_event_by_holder.head3')%></h2>
   <ul>
-    <li><b><%= t('mailers.decline_event_by_holder.text6') %></b> <%= @reasons %></li>
+    <li><b><%= t('mailers.cancel_event_by_holder.text6') %></b> <%= @reasons %></li>
   </ul>
-  <p><b><%= t('mailers.decline_event_by_holder.notice') %></b></p>
+  <p><b><%= t('mailers.cancel_event_by_holder.notice') %></b><a href="http://registrodelobbies.madrid.es/">http://registrodelobbies.madrid.es/</a></p>
 </td>
