fix differents test and views

--- a/app/views/organization_mailer/create.html.erb
+++ b/app/views/organization_mailer/create.html.erb
@@ -13,7 +13,7 @@
   </ul>
   <p><%= t('mailers.create_organization.text6') %></p>
   <p><%= t('mailers.create_organization.text7') %></p>
-  <p><%= t('mailers.create_organization.text8') %><a href="<%=@link%>"><%=@link%></a></p>
+  <p><%= t('mailers.create_organization.text8') %><a href="https://registrodelobbies.madrid.es"></a></p>
   <ul>
     <li><b><%= t('mailers.create_organization.text9') %></b></li>
     <li><%= t('mailers.create_organization.text10') %></li>
