--- a/app/views/organization_mailer/delete.html.erb
+++ b/app/views/organization_mailer/delete.html.erb
@@ -4,6 +4,6 @@
   <p><%= t('mailers.delete_organization.head2')%></p>
   <ul>
     <li><b><%= t('mailers.delete_organization.text2')%></b><%=  @lobby_name %></li>
-    <li><b><%= t('mailers.delete_organization.text3')%></b><%=  @lobby_invalidated_at %></li>
+    <li><b><%= t('mailers.delete_organization.text3')%></b><%=  @lobby_deleted_at %></li>
   </ul>
 </td>
