--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -7,7 +7,8 @@
   </p>
 
   <ul class="accordion">
-    <li class="accordion-navigation active">
+
+    <li class="accordion-navigation active lobbies-categories">
       <div class="accordion-title">
         <%= t'statistics.category_lobbies' %>
       </div>
@@ -24,7 +25,7 @@
             </tr>
           </thead>
           <tbody>
-            <% @lobby_category.each do |name , number| %>
+            <% @lobbies_categories.each do |name , number| %>
             <tr>
               <td>
                 <%= name %>
@@ -39,7 +40,7 @@
       </div>
     </li>
 
-    <li class="accordion-navigation active">
+    <li class="accordion-navigation active lobbies-interests">
       <div class="accordion-title">
         <%= t'statistics.interest_lobbies' %>
       </div>
@@ -82,8 +83,8 @@
               <th colspan="3">
                 <%= t'statistics.inscribed_lobbies' %>
                 <br />
-                <span>
-                  <%= @lobbies_active.count %>
+                <span class="active-lobbies">
+                  <%= @lobbies.count %>
                 </span>
                 <tr>
                   <td class="border-right">
@@ -91,21 +92,27 @@
                       <%= t'statistics.employed' %>
                     </strong>
                     <br />
-                    <%= self_employed(false).count %>
+                    <span class="self-employed-count">
+                      <%= self_employed_lobbies_count(@lobbies) %>
+                    </span>
                   </td>
                   <td class="border-right">
                     <strong>
                       <%= t'statistics.self_employed' %>
                     </strong>
                     <br />
-                    <%= self_employed(true).count %>
+                    <span class="employed-count">
+                      <%= employee_lobbies_count(@lobbies) %>
+                    </span>
                   </td>
                   <td>
                     <strong>
                       <%= t'statistics.agents' %>
                     </strong>
                     <br />
-                    <%= @agent_active %>
+                    <span class="active-agents-count">
+                      <%= @active_agent_count %>
+                    </span>
                   </td>
                 </tr>
               </th>
@@ -117,7 +124,7 @@
 
     <li class="accordion-navigation active">
       <div class="accordion-title">
-        <%= t'statistics.public_agendas' %>
+        <%= t 'statistics.public_agendas' %>
       </div>
       <div class="content active">
         <table>
@@ -127,7 +134,9 @@
                 <%= t'statistics.lobby_events' %>
               </th>
               <td class="text-center">
-                <%= @event_lobby_activity %>
+                <span class="lobby-activity">
+                  <%= @event_lobby_activity %>
+                </span>
               </td>
             </tr>
             <tr>
@@ -135,7 +144,9 @@
                 <%= t'statistics.total_events' %>
               </th>
               <td class="text-center">
-                <%= @event_all %>
+                <span class="events-count">
+                  <%= @events_count %>
+                </span>
               </td>
             </tr>
             <tr>
@@ -143,7 +154,9 @@
                 <%= t'statistics.amount_public_agendas' %>
               </th>
               <td class="text-center">
-                <%= @holder_all %>
+                <span class="holders-count">
+                  <%= @holders_count %>
+                </span>
               </td>
             </tr>
           </tbody>
