--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,17 +1,17 @@
 <td style="padding-bottom: 20px; padding-left: 10px;">
   <h1 style="font-family: 'Open Sans','Helvetica Neue',arial,sans-serif;">
-    <%= t('mailers.welcome_organization.welcome', name: @user.name) %>
+    <%= t('mailers.welcome_user.welcome', name: @user.name) %>
   </h1>
 
   <p style="font-family: 'Open Sans','Helvetica Neue',arial,sans-serif;font-size: 14px;font-weight: normal;line-height: 24px;">
-    <%= t('mailers.welcome_organization.text1') %>
+    <%= t('mailers.welcome_user.text1') %>
   </p>
 
   <p style="font-family: 'Open Sans','Helvetica Neue',arial,sans-serif;font-size: 14px;font-weight: normal;line-height: 24px;">
-    <%= t('mailers.welcome_organization.text2', email: @user.email, password: @user.password) %>
+    <%= t('mailers.welcome_user.text2', email: @user.email, password: @user.password) %>
   </p>
 
   <p style="font-family: 'Open Sans','Helvetica Neue',arial,sans-serif;font-size: 14px;font-weight: normal;line-height: 24px;">
-    <%= t('mailers.welcome_organization.thanks') %>
+    <%= t('mailers.welcome_user.thanks') %>
   </p>
 </td>
