--- a/app/views/organization_mailer/delete.html.erb
+++ b/app/views/organization_mailer/delete.html.erb
@@ -1,9 +1,9 @@
 <td>
-  <h1><%= t('mailers.delete_organization.head1', lobby_reference: @lobby_reference)%></h1>
-  <p><%= t('mailers.delete_organization.text1', lobby_reference: @lobby_reference) %></p>
+  <h1><%= t('mailers.delete_organization.head1', lobby_reference: @organization.id)%></h1>
+  <p><%= t('mailers.delete_organization.text1', lobby_reference: @organization.id) %></p>
   <p><%= t('mailers.delete_organization.head2')%></p>
   <ul>
-    <li><b><%= t('mailers.delete_organization.text2')%></b><%=  @lobby_name %></li>
-    <li><b><%= t('mailers.delete_organization.text3')%></b><%=  @lobby_deleted_at %></li>
+    <li><b><%= t('mailers.delete_organization.text2')%></b><%= @organization.name %></li>
+    <li><b><%= t('mailers.delete_organization.text3')%></b><%= I18n.l @organization.canceled_at, format: :long if @organization.canceled_at.present? %></li>
   </ul>
 </td>
