--- a/app/views/organization_mailer/invalidate.html.erb
+++ b/app/views/organization_mailer/invalidate.html.erb
@@ -1,11 +1,9 @@
 <td>
-  <h1>
-    <%= t('mailers.invalidate_organization.welcome', name: @name) %>
-  </h1>
-  <p>
-     <%= t('mailers.invalidate_organization.text1', title: @title) %>
-  </p>
-  <p>
-    <%= t('mailers.invalidate_organization.thanks') %>
-  </p>
+  <h1><%= t('mailers.invalidate_organization.head1', lobby_reference: @organization.id)%></h1>
+  <p><%= t('mailers.invalidate_organization.text1', lobby_reference: @organization.id) %></p>
+  <p><%= t('mailers.invalidate_organization.text2')%></p>
+  <ul>
+    <li><b><%= t('mailers.invalidate_organization.text3')%></b><%= @organization.name %></li>
+    <li><b><%= t('mailers.invalidate_organization.text4')%></b><%= I18n.l @organization.invalidated_at, format: :long %></li>
+  </ul>
 </td>
