--- a/app/views/organization_mailer/update.html.erb
+++ b/app/views/organization_mailer/update.html.erb
@@ -1,8 +1,8 @@
 <td>
-  <h1><%= t('mailers.update_organization.head1', lobby_reference: @lobby_reference)%></h1>
-  <p><%= t('mailers.update_organization.text1', lobby_reference: @lobby_reference) %></p>
+  <h1><%= t('mailers.update_organization.head1', lobby_reference: @organization.id)%></h1>
+  <p><%= t('mailers.update_organization.text1', lobby_reference: @organization.id) %></p>
   <p><%= t('mailers.update_organization.head2')%></p>
   <ul>
-    <li><b><%= t('mailers.update_organization.text2')%></b><%= @lobby_name %></li>
-    <li><b><%= t('mailers.update_organization.text3')%></b><%= @lobby_updated_date %></li>
+    <li><b><%= t('mailers.update_organization.text2')%></b><%= @organization.id %></li>
+    <li><b><%= t('mailers.update_organization.text3')%></b><%= I18n.l @organization.modification_date, format: :long if @organization.modification_date.present? %></li>
   </ul>
