Add missing specs to user mailer spec

--- a/app/views/user_mailer/infringement_email.html.erb
+++ b/app/views/user_mailer/infringement_email.html.erb
@@ -1,19 +1,29 @@
 <td>
-  <h1><%= t('mailers.infringement_email.head1', infringement_reference: @infringement_reference)%></h1>
-  <p><%= t('mailers.infringement_email.text1', infringement_reference: @infringement_reference) %></p>
+  <h1><%= t('mailers.infringement_email.head1', infringement_reference: @infringement_email.id)%></h1>
+  <p><%= t('mailers.infringement_email.text1', infringement_reference: @infringement_email.id) %></p>
   <h2><%= t('mailers.infringement_email.head2')%></h2>
   <ul>
-    <li><b><%= t('mailers.infringement_email.text2') %></b><%= @email.subject %></li>
-    <li><b><%= t('mailers.infringement_email.text3') %></b><%= @email.description.html_safe %></li>
-    <li><b><%= t('mailers.infringement_email.link_html') %></b><a href="<%= @link %>"><%= @link %></a></li>
-    <li><b><%= t('mailers.infringement_email.text4') %></b><%= @email.attachment_file_name %></li>
-    <li> <ul>
-          <% if @email.affected_referer.present? %>
-              <li><%= @email.affected_referer %></li>
+    <li><b><%= t('mailers.infringement_email.text2') %></b><%= @infringement_email.subject %></li>
+    <li><b><%= t('mailers.infringement_email.text3') %></b><%= @infringement_email.description.html_safe if @infringement_email.description.present? %></li>
+    <li><b><%= t('mailers.infringement_email.link_html') %></b><a href="<%= @infringement_email.link %>"><%= @infringement_email.link %></a></li>
+    <% if @infringement_email.attachment.present? %>
+      <li>
+        <b><%= t('mailers.infringement_email.text4') %></b>
+        <a href="<%= @infringement_email.attachment.url %>">
+          <%= @infringement_email.attachment_file_name %>
+        </a>
+      </li>
+    <% end %>
+    <% if @infringement_email.affected_referer.present? || @infringement_email.affected.present? %>
+      <li>
+        <ul>
+          <% if @infringement_email.affected_referer.present? %>
+            <li><%= @infringement_email.affected_referer %></li>
           <% else %>
-              <li><%= @email.affected %></li>
+            <li><%= @infringement_email.affected %></li>
           <% end %>
-          </ul>
-    </li>
+        </ul>
+      </li>
+    <% end %>
   </ul>
 </td>
