--- a/app/views/organization_mailer/delete.html.erb
+++ b/app/views/organization_mailer/delete.html.erb
@@ -1,5 +1,5 @@
 <td>
-  <h1><%= t('mailers.delete_organization.head1', lobby_name: @organization.id)%></h1>
+  <h1><%= t('mailers.delete_organization.head1', lobby_name: @organization.fullname)%></h1>
   <p><%= t('mailers.delete_organization.text1', lobby_reference: @organization.reference) %></p>
   <p><%= t('mailers.delete_organization.head2')%></p>
   <ul>
