--- a/app/views/admin/organizations/show.html.erb
+++ b/app/views/admin/organizations/show.html.erb
@@ -491,7 +491,7 @@
           <br />
           <div class="small-3 medium-6 columns mb10">
             <p>
-              <%= link_to attachment.file_file_name, attachment.file.url %>
+              <%= link_to attachment.file.original_filename, attachment.file.url %>
             </p>
           </div>
         </div>
