Not display agents with allow_public_data:false on public organization page

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -276,19 +276,21 @@
         <div class="content active">
           <% if @organization.agents.present? %>
             <% @organization.agents.each do |agent| %>
-              <p>
-                <strong><%= t('organizations.show.agents_fullname') %></strong>
-                <%= agent.name %>
-                <%= agent.first_surname %>
-                <%= agent.second_surname %>
-              </p>
-              <p><strong><%= t('organizations.show.agents_from') %></strong>
-                <%= I18n.l agent.from if agent.from? %>
-              </p>
-              <% if agent.to.present? %>
-                <p><strong><%= t('organizations.show.agents_to') %></strong>
-                  <%= I18n.l agent.to if agent.to.present? %>
+              <% if agent.allow_public_data %>
+                <p>
+                  <strong><%= t('organizations.show.agents_fullname') %></strong>
+                  <%= agent.name %>
+                  <%= agent.first_surname %>
+                  <%= agent.second_surname %>
                 </p>
+                <p><strong><%= t('organizations.show.agents_from') %></strong>
+                  <%= I18n.l agent.from if agent.from? %>
+                </p>
+                <% if agent.to.present? %>
+                  <p><strong><%= t('organizations.show.agents_to') %></strong>
+                    <%= I18n.l agent.to if agent.to.present? %>
+                  </p>
+                <% end %>
               <% end %>
             <% end %>
           <% else %>
