--- a/app/views/admin/organizations/index.html.erb
+++ b/app/views/admin/organizations/index.html.erb
@@ -40,6 +40,11 @@
           <%= link_to organization.fullname, admin_organization_path(organization) %>
         </td>
         <td class="right">
+          <%= link_to admin_organization_agents_path(organization),
+                      title: "Agentes" do %>
+            <i class="step fi-torso size-24"></i>
+          <% end %>
+
           <%= link_to organization_path(organization),
                       target: :_blank,
                       title: t('backend.lobby_show') do %>
