--- a/app/views/admin/organizations/_data.html.erb
+++ b/app/views/admin/organizations/_data.html.erb
@@ -105,8 +105,9 @@
       <br />
       <%= f.label :registered_lobby_ids, t('backend.identifying_data.registered_lobbies_title') %>
       <%= f.select :registered_lobby_ids, options_for_registered_lobby, {}, { :multiple => true} %>
-
       <%= form_field_errors(f, :registered_lobby) %>
+      <%= f.label :other_registered_lobby, t('backend.identifying_data.other_registered_lobby') %>
+      <%= f.text_field :other_registered_lobby %>
     </div>
   </div>
 </fieldset>
