--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -329,7 +329,7 @@
 
     <li class="accordion-navigation active">
       <div class="accordion-title">
-        Reuniones mantenidas
+        Reuniones
         <span class="fa accordion-icon"></span>
       </div>
         <div class="content active">
@@ -337,7 +337,13 @@
             <% if @organization.events.present? %>
               <% @organization.events.each do |event| %>
                 <li>
-                  <p><%= link_to event.title, show_path(event) %></p>
+                  <p>
+                    <%= link_to event.title, show_path(event) %>
+                    <span class="bullet">&nbsp;&bull;&nbsp;</span>
+                    <%= show_agenda_link(event.position.holder) %>
+                    <span class="bullet">&nbsp;&bull;&nbsp;</span>
+                    <%= I18n.l event.scheduled, format: :complete if event.scheduled %>
+                  </p>
                 </li>
               <% end %>
             <% else %>
