--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -10,6 +10,14 @@
       <%= show_headline(params) %>
     </div>
 
+    <div class="row">
+      <div class="small-12 large-12 small-offset-1 columns right mb20">
+        <div class="text-center">
+          <%= paginate @events.hits %>
+        </div>
+      </div>
+    </div>
+
     <div class="small-12 columns tools">
       <div class="mb20">
         <%= t('main.get_updates')%><a id= "atom_link" href="<%= current_url(:format=>:atom)%>"><span class="icon icon__feed"></span> feed</a>
