Add basic funcionalities to send a newsletter
Basic CRUD operations for a newsletter, plus a deliver action, used after previsulizaling a newsletter

This code is heavily inspired by the newsletter code used in CONSUL https://github.com/consul/consul/pull/2462

--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -108,6 +108,9 @@
         <% end %>
       </li>
     <% end %>
+    <li class="<%= active_menu('admin/newsletters') %>">
+        <%= link_to t("admin.menu.newsletters"), admin_newsletters_path %>
+    </li>
     <li>
       <%= link_to help_by_role(current_user), target: "_blank" do %>
         <i class="fi-magnifying-glass size-18"> <%= t("header.btn_help")%></i>
