Adds styles and i18n to admin newsletter views

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -13,6 +13,7 @@
  *= require all
  *= require admin/agents
  *= require admin/events
+ *= require admin/newsletters
  *= require fixes
  *= require foundation-icons
  *= require 'jquery-ui/sortable'
