--- a/app/views/admin/newsletters/_form.html.erb
+++ b/app/views/admin/newsletters/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_for [:admin, @newsletter] do |f| %>
 
   <% if @newsletter.errors.any? %>
-    <div class="panel callout radius">
+    <div class="panel alert-box alert radius">
       <strong>
         <%= t('activerecord.errors.template.header',
-            :model => Newsletter.model_name.human, 
+            :model => Newsletter.model_name.human,
             :count => @newsletter.errors.count) %></strong>
       <ul>
         <% @newsletter.errors.full_messages.each do |msg| %>
@@ -14,8 +14,11 @@
     </div>
   <% end %>
 
+  <%= f.label :subject, t('backend.newsletters.new.subject') %>
   <%= f.text_field :subject %>
-  <%= f.text_area :body %>
+
+  <%= f.label :body, t('backend.newsletters.new.body') %>
+  <%= f.text_area :body, rows: 10 %>
 
   <div class="margin-top">
     <%= f.submit class: "button success" %>
