--- a/app/views/admin/newsletters/index.html.erb
+++ b/app/views/admin/newsletters/index.html.erb
@@ -8,7 +8,7 @@
       <tr>
         <th class="small-2"><%= t("backend.newsletters.index.subject") %></th>
         <th><%= t("backend.newsletters.index.sent") %></th>
-        <th class="small-4"><%= t("backend.newsletters.index.actions") %></th>
+        <th><%= t("backend.newsletters.index.actions") %></th>
       </tr>
     </thead>
     <tbody>
@@ -25,25 +25,19 @@
           <% end %>
         </td>
         <td>
-          <div class="small-4 column">
           <%= link_to t("backend.newsletters.index.edit"), edit_admin_newsletter_path(newsletter),
                                                          method: :get, class: "button hollow expanded" %>
-          </div>
-          <div class="small-4 column">
           <%= link_to t("backend.newsletters.index.delete"), admin_newsletter_path(newsletter),
                                                            method: :delete, class: "button hollow alert expanded" %>
-          </div>
-          <div class="small-4 column">
           <%= link_to t("backend.newsletters.index.preview"), admin_newsletter_path(newsletter),
                                                             class: "button expanded" %>
-          </div>
         </td>
       </tr>
     <% end %>
     </tbody>
   </table>
 <% else %>
-  <div data-alert class="callout primary margin-top clear">
+  <div data-alert class="alert-box radius primary margin-top clear">
     <%= t("backend.newsletters.index.empty_newsletters") %>
   </div>
 <% end %>
