--- a/app/views/admin/newsletters/show.html.erb
+++ b/app/views/admin/newsletters/show.html.erb
@@ -1,5 +1,5 @@
-<%= link_to t('backend.back'), 
-    admin_newsletters_path , 
+<%= link_to t('backend.back'),
+    admin_newsletters_path ,
     class: "button tiny radius" %>
 
 <h2><%= t("backend.newsletters.show.title") %></h2>
@@ -20,6 +20,7 @@
       <%= @newsletter.subject %>
     </div>
     <div class="small-12 column">
+    <div class="small-12 column margin-top">
       <strong><%= t("backend.newsletters.show.segment_recipient") %></strong><br>
       <%= t("backend.newsletters.show.affected_users", n: recipients_count) %>
     </div>
@@ -34,22 +35,34 @@
 
   <div class="newsletter-body-content">
 
-    <table cellpadding="0" cellspacing="0" border="0" style="background: #fff; margin: 0 auto; max-width: 700px; width:100%;">
+    <table cellpadding="0" cellspacing="0" border="0" style="background: #fff; margin: 0 auto; max-width: 800px; width:100%;">
+      <thead>
+        <tr>
+          <th style="background: #013df5;">
+            <%= image_tag 'logo-email.jpg', alt:'¡Madrid' %>
+          </th>
+        </tr>
+      </thead>
       <tbody>
         <tr>
           <%= render file: "app/views/user_mailer/newsletter.html.erb" %>
         </tr>
+        <tr>
+          <td>
+            <p><%= t('mailers.footer', year: Date.current.year) %></p>
+          </td>
+        </tr>
       </tbody>
     </table>
-
   </div>
-</div>
 
 <% if @newsletter.draft? %>
-  <%= link_to t("backend.newsletters.show.send"),
-              deliver_admin_newsletter_path(@newsletter),
-              "data-alert": t("backend.newsletters.show.send_alert", n: recipients_count),
-              method: :post,
-              id: "js-send-newsletter-alert",
-              class: "button success" %>
+  <div class="samll-12 column margin-top">
+    <%= link_to t("backend.newsletters.show.send"),
+                deliver_admin_newsletter_path(@newsletter),
+                "data-alert": t("backend.newsletters.show.send_alert", n: recipients_count),
+                method: :post,
+                id: "js-send-newsletter-alert",
+                class: "button success" %>
+  </div>
 <% end %>
