Adds categories example select form

--- a/app/views/admin/newsletters/_form.html.erb
+++ b/app/views/admin/newsletters/_form.html.erb
@@ -1,5 +1,10 @@
 <%= form_for [:admin, @newsletter] do |f| %>
 
+  <label><%= t('backend.newsletters.new.category') %></label>
+  <select>
+    <option><%= t('backend.newsletters.new.select_category') %></option>
+  </select>
+
   <% if @newsletter.errors.any? %>
     <div class="panel alert-box alert radius">
       <strong>
