Add newsletter footer

--- a/app/views/admin/newsletters/show.html.erb
+++ b/app/views/admin/newsletters/show.html.erb
@@ -52,6 +52,7 @@
         </tr>
         <tr>
           <td>
+            <p><%= t('mailers.footer_newsletter') %>
             <p><%= t('mailers.footer', year: Date.current.year) %></p>
           </td>
         </tr>
