--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -14,6 +14,9 @@
     <%= yield %>
   </div>
   <div class="footer">
+    <% if newsletter? %>
+      <p><%= t('mailers.footer_newsletter') %></p>
+    <% end %>
     <p><%= t('mailers.footer', year: Date.current.year) %></p>
   </div>
 </body>
